12586
This is because x ^ y is an Int, not a Byte.

{code}
scala> arr1(4) = (arr1(4) ^ arr2(5)).toByte

scala> arr1.update(4, (arr1(4) ^ arr2(5)).toByte)

scala> implicit class cv(val as: Array[Byte]) extends AnyVal {
     | def update(i: Int, v: Int): Unit = as.update(i, v.toByte)
     | }
defined class cv

scala> arr1(4) ^= arr2(5)
{code}

Maybe it's possible to spec it in such a way that the conversions are inserted.

Anyway, the proposed fix for SI-9834 is slightly obscurantistical:
{code}
scala> arr1(4) ^= arr2(5)
<console>:14: error: value ^= is not a member of Byte
  Expression does not convert to assignment because:
    type mismatch;
     found   : Int
     required: Byte
       arr1(4) ^= arr2(5)
               ^
{code}

